deleted redundant CSS changes again, text area no longer goes out of bounds.

--- a/Assignmet 2/public/style.css
+++ b/Assignmet 2/public/style.css
@@ -17,10 +17,6 @@ h1{
 /* 
 TODO: These should be classes or IDs.
 
-
-/* 
-TODO: These should be classes or IDs.
-
 form{
     grid-column: 5 / 10;
     display: grid;
@@ -35,8 +31,7 @@ fieldset{
     gap: 10px;
     border: 0;
 }
-    */
-    */
+*/
 
 .name{
     gap: 10px;
@@ -76,8 +71,6 @@ fieldset{
 }
 
 /*TODO This is a bad class name.*/
-
-/*TODO This is a bad class name.*/
 .button{
     grid-column: span 1;
     grid-row: 9;
@@ -103,30 +96,13 @@ fieldset{
 }
 
 /*TODO: This may be a little too specific.*/
-.make-things-vertical-please > input, 
-.make-things-vertical-please > textarea, 
+.make-things-vertical-please > input,  
 .make-things-vertical-please > select {
     width: 50%;
 }
-#modify-item-form {
-    display: grid;
-    grid-template-columns: 50% 50%;
-}
 
-#modify-item-form>div>fieldset {
-    background-color: aquamarine;
-    margin: 5px;
-    padding: 5px;
-}
-
-.make-things-vertical-please {
-    display: flex;
-    flex-direction: column;
-}
-
-/*TODO: This may be a little too specific.*/
-.make-things-vertical-please > input, 
-.make-things-vertical-please > textarea, 
-.make-things-vertical-please > select {
-    width: 50%;
+/*TODO: This affects all textareas, will need to create a class should 
+this pose an issue for other pages*/
+textarea {
+    resize: vertical;
 }
